# simple-notifier

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
modules/: template.py
modules/avaliable/: discord_bot.py  discord_webhook.py  telegram.py
utils/: discord_get_id.py  telegram_get_id.py
