[project]
name = "simple-notifier"
version = "0.1.0"
description = "A simple API server which lets you send messages to different services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
]
# [project.optional-dependencies] #TODO: Figure out how to work with opt/extra depedencies
# telegram = [
#     "aiogram>=3.21.0"
# ]
