[project]
name = "simple-notifier"
version = "1.0"
description = "Modular notification API server which integrates to different services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
]
# [project.optional-dependencies] #TODO: Figure out how to work with opt/extra depedencies
# telegram = [
#     "aiogram>=3.21.0"
# ]
